--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jan 20 15:24:19 CET 2022
-sdk.dir=C\:\\Users\\matte\\AppData\\Local\\Android\\Sdk
+#Fri Jan 21 13:57:43 CET 2022
+sdk.dir=C\:\\Users\\Studente\\AppData\\Local\\Android\\Sdk
